PR optimization/9745 * loop.c (loop_iv_add_mult_emit_before): Call loop_regs_update before loop_insn_emit_before. (loop_iv_add_mult_sink, loop_iv_add_mult_hoist): Likewise.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@69220 138bc75d-0d04-0410-961f-82ee72b054a4